--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "shift_tracker",
   "version": "0.1.0",
+  "author": "Robert Lehmann",
+  "license": "ISC",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
