--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shift_tracker",
   "version": "0.1.0",
+  "description": "An app to track shifts",
   "author": "Robert Lehmann",
   "license": "ISC",
   "private": true,
